--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,39 @@
-head {
+body {
   margin: 0; }
+  body h3, body p {
+    word-wrap: break-word; }
+  body .loader-spinner {
+    display: none; }
+  body .main-container {
+    max-width: 1400px;
+    width: 100%;
+    margin: 20px auto; }
+  body .container {
+    width: 100%;
+    padding: 5px; }
+  body .logo {
+    text-align: center; }
+  body .localisation__contenu {
+    display: flex;
+    justify-content: center; }
+    body .localisation__contenu .text-localisation {
+      margin-left: 10px; }
+  body .explorer__contenu {
+    width: 80%;
+    margin: 10px auto;
+    text-align: center; }
+    body .explorer__contenu__btn {
+      height: 3rem;
+      width: 13.4rem;
+      margin: auto;
+      background: linear-gradient(#FF79DA, #9356DC);
+      border-radius: 1.5rem;
+      box-shadow: 0px 5px 3px rgba(0, 0, 0, 0.05);
+      transform: scale(1);
+      transition: transform 600ms ease-in-out; }
+      body .explorer__contenu__btn:hover {
+        background: linear-gradient(#ff88de, #9b63df);
+        box-shadow: 0px 6px 6px #0000002e;
+        transform: scale(1.15, 0.6); }
 
 /*# sourceMappingURL=style.css.map */
