--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -4,18 +4,46 @@
 }
 
 @mixin btn {
-    height: 3rem;
-    width: 13.4rem;
-    margin: auto;
+    height: 3.5rem;
+    width: 70%;
+    margin: 30px auto;
     background: $degraded-color;
-    border-radius: 1.5rem;
+    border-radius: 1.7rem;
     box-shadow: $box-shadow;
     transform: scale(1);
-    transition: transform 600ms ease-in-out;
+    transition: transform 200ms ease-in-out;
 
         &:hover {
             background: linear-gradient(lighten($secondary-color, 3%), lighten($primary-color, 3%));
             box-shadow: 0px 6px 6px #0000002e;
-            transform: scale(1.15, 0.6);
+            transform: scale(1.07);
+        }
+}
+
+@mixin heart 
+{
+    i
+        {
+            background: transparent;
+            background-clip: text; /* défini jusqu'où sétend l'arrière plan */
+            -webkit-text-fill-color: transparent;
+            -webkit-text-stroke: 1px black;
+            &:hover
+            {
+                background: linear-gradient($primary-color,$secondary-color);
+                -webkit-background-clip: text;
+                -webkit-text-stroke: 1px transparent;
+                animation: apparition 0.5s;
+            }
+        }
+        @keyframes apparition {
+            from 
+            {
+                opacity: 0%;
+            }
+            to 
+            {
+                opacity: 100%;
+            }
         }
 }
