--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,39 +1,378 @@
+@charset "UTF-8";
+@import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+.img-1 {
+  background-image: url(../assets/images/restaurants/img-1.jpg); }
+
+.img-2 {
+  background-image: url(../assets/images/restaurants/img-2.jpg); }
+
+.img-3 {
+  background-image: url(../assets/images/restaurants/img-3.jpg); }
+
+.img-4 {
+  background-image: url(../assets/images/restaurants/img-4.jpg); }
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box; }
+
 body {
+  max-width: 1500px;
+  font-family: "roboto", Arial, sans-serif;
+  font-size: 0.9rem;
+  margin: auto; }
+
+.loader-spinner {
+  display: none; }
+
+.main-container {
   margin: 0; }
-  body h3, body p {
+  .main-container h3, .main-container p {
     word-wrap: break-word; }
-  body .loader-spinner {
-    display: none; }
-  body .main-container {
+  .main-container .main-container {
     max-width: 1400px;
+    font-family: "roboto", Arial, sans-serif;
     width: 100%;
     margin: 20px auto; }
-  body .container {
+  .main-container .container {
     width: 100%;
     padding: 5px; }
-  body .logo {
+  .main-container .logo {
+    margin-top: 20px;
     text-align: center; }
-  body .localisation__contenu {
+  .main-container .localisation__contenu {
     display: flex;
     justify-content: center; }
-    body .localisation__contenu .text-localisation {
+    .main-container .localisation__contenu .text-localisation {
       margin-left: 10px; }
-  body .explorer__contenu {
-    width: 80%;
-    margin: 10px auto;
-    text-align: center; }
-    body .explorer__contenu__btn {
-      height: 3rem;
-      width: 13.4rem;
-      margin: auto;
-      background: linear-gradient(#FF79DA, #9356DC);
-      border-radius: 1.5rem;
+  .main-container a {
+    text-decoration: none;
+    color: black; }
+  .main-container .explorer {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    background-color: #f6f6f6;
+    margin-bottom: 3.1rem; }
+    .main-container .explorer__contenu {
+      width: 90%;
+      margin: 10px auto;
+      text-align: center;
+      padding-bottom: 30px; }
+      .main-container .explorer__contenu__btn {
+        height: 3.5rem;
+        width: 70%;
+        margin: 30px auto;
+        background: linear-gradient(#FF79DA, #9356DC);
+        border-radius: 1.7rem;
+        box-shadow: 0px 5px 3px rgba(0, 0, 0, 0.05);
+        transform: scale(1);
+        transition: transform 200ms ease-in-out; }
+        .main-container .explorer__contenu__btn:hover {
+          background: linear-gradient(#ff88de, #9b63df);
+          box-shadow: 0px 6px 6px #0000002e;
+          transform: scale(1.07); }
+        .main-container .explorer__contenu__btn p {
+          color: white;
+          font-weight: bold;
+          font-size: 0.9rem;
+          padding-top: 15px; }
+  .main-container .fonctionnement h3 {
+    margin-left: 10px;
+    margin-bottom: 2.5rem; }
+  .main-container .fonctionnement__options {
+    padding-left: 20px; }
+    @media (min-width: 768px) {
+      .main-container .fonctionnement__options {
+        display: flex;
+        justify-content: space-around; } }
+    .main-container .fonctionnement__options__cards {
+      display: flex;
+      align-items: center;
+      width: 90%;
+      height: 4.4rem;
+      background-color: #f6f6f6;
+      border-radius: 20px;
       box-shadow: 0px 5px 3px rgba(0, 0, 0, 0.05);
-      transform: scale(1);
-      transition: transform 600ms ease-in-out; }
-      body .explorer__contenu__btn:hover {
-        background: linear-gradient(#ff88de, #9b63df);
-        box-shadow: 0px 6px 6px #0000002e;
-        transform: scale(1.15, 0.6); }
+      margin-bottom: 1rem; }
+      @media (min-width: 768px) {
+        .main-container .fonctionnement__options__cards {
+          width: 30%; } }
+      .main-container .fonctionnement__options__cards i {
+        color: #7e7e7e;
+        margin: auto 1rem auto 0.30rem;
+        width: 20px; }
+      .main-container .fonctionnement__options__cards span {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: white;
+        width: 1.4rem;
+        height: 1.4rem;
+        border-radius: 100%;
+        background-color: #9356DC;
+        position: relative;
+        left: -0.70rem; }
+      .main-container .fonctionnement__options__cards p {
+        font-weight: bold; }
+      .main-container .fonctionnement__options__cards:hover {
+        background-color: #f5edff; }
+        .main-container .fonctionnement__options__cards:hover i {
+          color: #9356DC; }
+  .main-container .restaurants {
+    background-color: #f6f6f6; }
+    .main-container .restaurants__contenu {
+      margin: 0rem 1rem 0rem 1rem;
+      padding: 3.75rem 0rem 3.75rem 0rem; }
+      .main-container .restaurants__contenu h3 {
+        margin-bottom: 2rem; }
+      .main-container .restaurants__contenu__cards .img-restaurant {
+        width: 100%;
+        border-radius: 10px 10px 0px 0px;
+        object-fit: cover; }
+      @media (min-width: 768px) {
+        .main-container .restaurants__contenu__cards {
+          display: flex;
+          justify-content: space-around;
+          flex-wrap: wrap; } }
+  @media (min-width: 768px) {
+    .main-container .card-container {
+      width: 45%; } }
+  .main-container .card {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 170px 75px;
+    margin-bottom: 1rem;
+    background-color: white;
+    border-radius: 15px;
+    box-shadow: 0px 5px 3px rgba(0, 0, 0, 0.05); }
+    .main-container .card__image {
+      position: relative;
+      display: flex;
+      justify-content: flex-end;
+      grid-column: span 2;
+      grid-row: 1;
+      width: 100%;
+      background-size: cover;
+      background-position: center;
+      border-radius: 15px 15px 0px 0px; }
+      .main-container .card__image__nouveau {
+        position: absolute;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 5rem;
+        height: 1.9rem;
+        font-size: 0.75rem;
+        font-weight: bold;
+        color: #008766;
+        background-color: #99e2d0;
+        border-radius: 2px;
+        top: 1rem;
+        right: 0.5rem; }
+    .main-container .card__heart {
+      grid-column: 2;
+      grid-row: 2;
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
+      font-size: 1.5rem;
+      margin: 1.5rem; }
+      .main-container .card__heart i {
+        background: transparent;
+        background-clip: text;
+        /* défini jusqu'où sétend l'arrière plan */
+        -webkit-text-fill-color: transparent;
+        -webkit-text-stroke: 1px black; }
+        .main-container .card__heart i:hover {
+          background: linear-gradient(#9356DC, #FF79DA);
+          -webkit-background-clip: text;
+          -webkit-text-stroke: 1px transparent;
+          animation: apparition 0.5s; }
+@keyframes apparition {
+  from {
+    opacity: 0%; }
+  to {
+    opacity: 100%; } }
+    .main-container .card__body {
+      grid-column: 1 / span 2;
+      grid-row: 2;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      margin-left: 1rem; }
+      .main-container .card__body h4 {
+        margin-bottom: 0.25rem; }
+
+footer {
+  background-color: #353535;
+  color: white;
+  padding-bottom: 2rem; }
+  footer h1 {
+    margin: 0rem 0rem 1rem 1rem;
+    padding-top: 1rem;
+    font-weight: lighter; }
+    @media (min-width: 768px) {
+      footer h1 {
+        text-align: center; } }
+  footer i {
+    margin-right: 0.5rem; }
+  footer ul {
+    list-style-type: none;
+    margin-left: 1rem; }
+    @media (min-width: 768px) {
+      footer ul {
+        display: flex;
+        justify-content: space-around;
+        white-space: nowrap; } }
+    footer ul li {
+      margin-bottom: 0.50rem; }
+      @media (min-width: 768px) {
+        footer ul li {
+          width: 25%;
+          text-align: center; } }
+      footer ul li a {
+        color: white; }
+
+.fa-hands-helping {
+  font-size: 0.70rem;
+  width: 13px; }
+
+/*---------------------------------------
+---------------------PAGE 2----------------
+---------------------------------------------*/
+/* SECTION 1 */
+.illustration {
+  display: flex;
+  align-items: flex-end;
+  background-size: cover;
+  background-position: center;
+  height: 18.75rem; }
+  .illustration__container {
+    width: 100%;
+    background-color: #f6f6f6;
+    font-size: 1.25rem;
+    border-radius: 35px 35px 0px 0px;
+    padding: 2rem 1rem 0rem 1rem; }
+    @media (min-width: 768px) {
+      .illustration__container {
+        display: flex;
+        justify-content: center; } }
+    .illustration__container__content {
+      display: flex;
+      justify-content: space-between;
+      align-items: center; }
+      @media (min-width: 768px) {
+        .illustration__container__content {
+          width: 95%; } }
+    .illustration__container i {
+      background: transparent;
+      background-clip: text;
+      /* défini jusqu'où sétend l'arrière plan */
+      -webkit-text-fill-color: transparent;
+      -webkit-text-stroke: 1px black; }
+      .illustration__container i:hover {
+        background: linear-gradient(#9356DC, #FF79DA);
+        -webkit-background-clip: text;
+        -webkit-text-stroke: 1px transparent;
+        animation: apparition 0.5s; }
+@keyframes apparition {
+  from {
+    opacity: 0%; }
+  to {
+    opacity: 100%; } }
+@media (min-width: 768px) {
+  .menu {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap; } }
+@media (min-width: 768px) {
+  .menu__starter {
+    width: 45%; } }
+@media (min-width: 768px) {
+  .menu__main {
+    width: 45%; } }
+@media (min-width: 768px) {
+  .menu__dessert {
+    width: 95%; } }
+
+.menu__title {
+  margin-top: 2rem;
+  margin-bottom: 1rem; }
+  .menu__title span {
+    border-bottom: solid #99e2d0 3px; }
+.menu__card {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 4rem;
+  background-color: white;
+  border-radius: 15px;
+  box-shadow: 0px 5px 3px rgba(0, 0, 0, 0.05);
+  overflow: hidden;
+  margin: 0rem 1rem 1rem 1rem;
+  cursor: pointer; }
+  .menu__card:active .menu__card__body {
+    width: 80%; }
+    .menu__card:active .menu__card__body + .menu__card__body__animation-check {
+      width: 20%;
+      transform: scale(1); }
+      .menu__card:active .menu__card__body + .menu__card__body__animation-check .fa-check-circle {
+        animation: check-rotate 800ms linear; }
+  @media (min-width: 768px) {
+    .menu__card:hover .menu__card__body {
+      width: 80%; }
+      .menu__card:hover .menu__card__body + .menu__card__body__animation-check {
+        width: 20%;
+        transform: scale(1); }
+        .menu__card:hover .menu__card__body + .menu__card__body__animation-check .fa-check-circle {
+          animation: check-rotate 800ms linear; } }
+  .menu__card__body {
+    width: 100%;
+    transition: all 1s; }
+    .menu__card__body__title {
+      padding-left: 1rem; }
+    .menu__card__body__description {
+      display: flex;
+      justify-content: space-between;
+      padding: 0rem 1rem; }
+      .menu__card__body__description p {
+        margin-right: 1rem;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap; }
+    .menu__card__body__animation-check {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100%;
+      width: 0%;
+      background-color: #99e2d0;
+      border-radius: 0px 15px 15px 0px;
+      transform: scale(0, 1);
+      transform-origin: right;
+      transition: all 1s; }
+      .menu__card__body__animation-check .fa-check-circle {
+        font-size: 1.5rem;
+        color: white; }
+
+.order {
+  margin-top: 2.5rem;
+  margin-bottom: 3.5rem; }
+  .order__button {
+    height: 3.5rem;
+    width: 70%;
+    margin: 30px auto;
+    background: linear-gradient(#FF79DA, #9356DC);
+    border-radius: 1.7rem;
+    box-shadow: 0px 5px 3px rgba(0, 0, 0, 0.05);
+    transform: scale(1);
+    transition: transform 200ms ease-in-out; }
+    .order__button:hover {
+      background: linear-gradient(#ff88de, #9b63df);
+      box-shadow: 0px 6px 6px #0000002e;
+      transform: scale(1.07); }
 
 /*# sourceMappingURL=style.css.map */
