--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Shrikhand&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 @import "./utils/variables";
+@import "./utils/loops";
 @import "./utils/mixins";
 @import "./layout/container";
 @import "./pages/index";
