--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -1,16 +1,33 @@
-body {
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body
+{
+    max-width: 1500px;
+    font-family: "roboto", Arial, sans-serif;
+    font-size: 0.9rem;
+    margin: auto;
+}
+
+.loader-spinner {
+    display: none;
+}
+
+.main-container {
     margin: 0;
 
     h3, p {
         word-wrap: break-word;
     }
 
-    .loader-spinner {
-        display: none;
-    }
+    
 
     .main-container {
         max-width: 1400px;
+        font-family: "roboto", Arial, sans-serif;
         width: 100%;
         margin: 20px auto;
     }
@@ -20,6 +37,7 @@ body {
     }
 
     .logo {
+        margin-top: 20px;
         text-align: center;
     }
 
@@ -32,18 +50,446 @@ body {
         }
     }
 
-    .explorer__contenu {
-        width: 80%;
-        margin: 10px auto;
-        text-align: center;
-
-        &__btn {
-            @include btn;
+    a {
+        text-decoration: none;
+        color: black;
     }
-    } 
 
-   
-   
+    .explorer 
+    {
+        display: flex;
+        justify-content: center;
+        text-align: center;
+        background-color: $background-color;
+        margin-bottom: 3.1rem;
+
+        &__contenu {
+            width: 90%;
+            margin: 10px auto;
+            text-align: center;
+            padding-bottom: 30px;
+
+            &__btn {
+                @include btn;
+                p {
+                    color: white;
+                    font-weight: bold;
+                    font-size: 0.9rem;
+                    padding-top: 15px;
+                }
+            }
+        }
+    }
+
+    .fonctionnement {
+    h3
+    {
+        margin-left: 10px; 
+        margin-bottom: 2.5rem;
+    }
+
+    &__options 
+    {
+        padding-left: 20px;
+
+        @media (min-width: 768px)
+        {
+            display: flex;
+            justify-content: space-around;
+        }
+
+        &__cards
+        {
+            display: flex;
+            align-items: center;
+            width: 90%;
+            height: 4.4rem;
+            background-color: $background-color;
+            border-radius: 20px;
+            box-shadow: $box-shadow;
+            margin-bottom: 1rem;
+
+            @media (min-width: 768px)
+            {
+                width: 30%;
+            }
+
+            i
+            {
+                color: #7e7e7e;
+                margin:auto 1rem auto 0.30rem;
+                width: 20px;
+            }
+
+            span 
+            {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                color: white;
+                width : 1.4rem;
+                height: 1.4rem;
+                border-radius: 100%;
+                background-color: $primary-color;
+                position: relative;
+                left: -0.70rem;                 
+            }
+
+            p
+            {
+                font-weight: bold;
+            }
+
+            &:hover
+            {
+                background-color: #f5edff;
+
+                i 
+                {
+                    color: $primary-color;
+                }
+            }
+        }
+    }
 }
+
+.restaurants
+{
+    background-color: $background-color;
+    &__contenu
+    {
+        margin: 0rem 1rem 0rem 1rem;
+        padding: 3.75rem 0rem 3.75rem 0rem;
+        h3
+        {
+            margin-bottom: 2rem;
+        }
+        &__cards
+        {
+            .img-restaurant {
+                width: 100%;
+                border-radius: 10px 10px 0px 0px;
+                object-fit: cover;
+            }
+            @media (min-width: 768px)
+            {
+                display: flex;
+                justify-content: space-around;
+                flex-wrap: wrap;
+            }
+        }
+    }
+}
+.card-container
+{
+    @media (min-width: 768px)
+    {
+        width: 45%;
+    }
+}
+.card
+{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 170px 75px;
+    margin-bottom: 1rem;
+    background-color: white;
+    border-radius: 15px;
+    box-shadow: $box-shadow;
+
+    &__image
+    {
+        position: relative;
+        display: flex;
+        justify-content: flex-end;
+        grid-column: span 2;
+        grid-row: 1;
+        width : 100%;
+        background-size: cover;
+        background-position: center;
+        border-radius: 15px 15px 0px 0px;
+
+        &__nouveau
+        {
+            position: absolute;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 5rem;
+            height: 1.9rem;
+            font-size: 0.75rem;
+            font-weight: bold;
+            color: #008766;
+            background-color: #99e2d0;
+            border-radius: 2px;
+            top: 1rem;
+            right: 0.5rem;
+        }
+    }
+    &__heart
+    {
+        grid-column: 2;
+        grid-row: 2;
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+        font-size: 1.5rem;
+        margin: 1.5rem;
+        @include heart
+       
+    }
+    &__body
+    {
+        grid-column: 1 / span 2;
+        grid-row: 2;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin-left: 1rem;
+
+        h4 
+        {
+            margin-bottom: 0.25rem;
+        }
+    }
+}
+
+}
+
+footer
+{
+    background-color: #353535;
+    color: white;
+    padding-bottom: 2rem;
+
+    h1
+    {
+        margin: 0rem 0rem 1rem 1rem;
+        padding-top: 1rem;
+        font-weight: lighter;
+
+        @media (min-width: 768px)
+        {
+            text-align: center;
+        }
+    }
+    i 
+    {
+       margin-right: 0.5rem;
+    }
+    ul 
+    {
+        list-style-type: none;
+        margin-left: 1rem;
+
+        @media (min-width: 768px)
+        {
+            display: flex;
+            justify-content: space-around;
+            white-space: nowrap;
+        }
+        li
+        {
+            margin-bottom: 0.50rem;
+            @media (min-width: 768px)
+            {
+                width: 25%;
+                text-align: center;
+            }
+            a 
+            {
+            color: white;
+            }
+        }
+    }
+}
+.fa-hands-helping
+{
+    font-size: 0.70rem;
+    width: 13px;
+}
+
+/*---------------------------------------
+---------------------PAGE 2----------------
+---------------------------------------------*/
+
+/* SECTION 1 */
+.illustration
+{
+    display: flex;
+    align-items: flex-end;
+    background-size: cover;
+    background-position: center;
+    height: 18.75rem;
+    &__container
+    {
+        width: 100%;
+        background-color: $background-color;
+        font-size: 1.25rem;
+        border-radius: 35px 35px 0px 0px;
+        padding: 2rem 1rem 0rem 1rem;
+
+        @media (min-width: 768px)
+        {
+            display: flex;
+            justify-content: center;
+        }
+
+        &__content
+        {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            @media (min-width: 768px)
+            {
+            width: 95%;
+            }
+        }
+        @include heart
+    }
+}
+
+.menu
+{
+    @media (min-width: 768px)
+    {
+        display: flex;
+        justify-content: space-around;
+        flex-wrap: wrap;
+    }
+    &__starter
+    {
+        @media (min-width: 768px)
+        {
+            width: 45%;
+        }
+    }
+    &__main
+    {
+        @media (min-width: 768px)
+        {
+            width: 45%;
+        }
+    }
+    &__dessert
+    {
+        @media (min-width: 768px)
+        {
+            width: 95%;
+        }
+    }
+}
+.menu
+{
+    &__title
+    {
+        margin-top: 2rem;
+        margin-bottom: 1rem;
+        span
+        {
+            border-bottom: solid #99e2d0 3px;
+        }
+    }
+    &__card
+    {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        height: 4rem;
+        background-color: white;
+        border-radius: 15px;
+        box-shadow: $box-shadow;
+        overflow: hidden;
+        margin: 0rem 1rem 1rem 1rem;
+        cursor: pointer;
+        &:active
+        {
+            .menu__card__body
+            {
+            width: 80%;
+                + .menu__card__body__animation-check
+                {
+                    width: 20%;
+                    transform: scale(1);
+                    .fa-check-circle
+                    {
+                        animation: check-rotate 800ms linear;
+                    }
+                }
+            }
+        }
+        @media (min-width: 768px)
+        {
+            &:hover
+            {
+                .menu__card__body
+                {
+                width: 80%;
+                    + .menu__card__body__animation-check
+                    {
+                        width: 20%;
+                        transform: scale(1);
+                        .fa-check-circle
+                        {
+                            animation: check-rotate 800ms linear;
+                        }
+                    }
+                }
+            }
+        }
+        &__body
+        {
+            width: 100%;
+            transition: all 1s;
+            &__title
+            {
+                padding-left:  1rem;
+            }
+            &__description
+            {
+                display: flex;
+                justify-content: space-between;
+                padding: 0rem 1rem;
+                p
+                {
+                    margin-right: 1rem;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                    white-space: nowrap;
+                }
+            }
+            &__animation-check
+            {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                height: 100%;
+                width: 0%;
+                background-color: #99e2d0;
+                border-radius: 0px 15px 15px 0px;
+                transform: scale(0,1);
+                transform-origin: right;
+                transition: all 1s;
+                .fa-check-circle
+                {
+                    font-size: 1.5rem;
+                    color: white;
+                }
+            }
+        }
+    }
+}
+
+.order
+{
+    margin-top: 2.5rem;
+    margin-bottom: 3.5rem;
+    &__button
+    {
+        @include btn;
+    }
+}
+   
+
 
  
