--- a/public/css/style.css
+++ b/public/css/style.css
@@ -219,31 +219,31 @@ footer {
         text-align: center; } }
   footer i {
     margin-right: 0.5rem; }
-  footer ul {
-    list-style-type: none;
-    margin-left: 1rem; }
-    @media (min-width: 768px) {
-      footer ul {
-        display: flex;
-        justify-content: space-around;
-        white-space: nowrap; } }
-    footer ul li {
-      margin-bottom: 0.50rem; }
+  footer .footer-container {
+    max-width: 500px;
+    margin-left: auto;
+    margin-right: auto; }
+    footer .footer-container ul {
+      list-style-type: none;
+      margin-left: 1rem; }
       @media (min-width: 768px) {
-        footer ul li {
-          width: 25%;
-          text-align: center; } }
-      footer ul li a {
-        color: white; }
+        footer .footer-container ul {
+          display: flex;
+          justify-content: space-around;
+          white-space: nowrap; } }
+      footer .footer-container ul li {
+        margin-bottom: 0.50rem; }
+        @media (min-width: 768px) {
+          footer .footer-container ul li {
+            width: 25%;
+            text-align: center; } }
+        footer .footer-container ul li a {
+          color: white; }
 
 .fa-hands-helping {
   font-size: 0.70rem;
   width: 13px; }
 
-/*---------------------------------------
----------------------PAGE 2----------------
----------------------------------------------*/
-/* SECTION 1 */
 .illustration {
   display: flex;
   align-items: flex-end;
