--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,6 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap");
 .restaurants .img1, .restaurants .img3, .restaurants .img4 {
   object-position: 0% 100%; }
 .restaurants .img-2 {
@@ -116,7 +117,7 @@ header {
   justify-content: center; }
   header .arrow {
     position: absolute;
-    top: 1.1rem;
+    top: 1.6rem;
     left: 1rem; }
     header .arrow i {
       right: 2rem;
@@ -124,12 +125,6 @@ header {
     @media (min-width: 768px) {
       header .arrow {
         left: 5%; } }
-    header .arrow .logo {
-      text-align: center;
-      padding: 1rem 0rem 0.5rem 0rem; }
-      header .arrow .logo img {
-        width: 9rem;
-        height: auto; }
 
 * {
   margin: 0;
@@ -153,16 +148,26 @@ body {
   color: white;
   font-size: 2rem;
   background: linear-gradient(#FF79DA, #9356DC);
-  animation: loader 2s ease-in-out both; }
+  animation: loader 2s ease-in-out both;
+  /* apparition layout chargement */ }
   .loader-spinner .fa-spinner {
-    animation: loader-spinner 1s ease-in-out 4 both; }
+    animation: loader-spinner 1s ease-in-out 4 both;
+    /* animation loader spinner */ }
 
 .index-content {
   background-color: white;
-  animation: content-animation 2s ease-in-out 2s both; }
+  animation: content-animation 1s ease-in-out 2s both;
+  /* faire apparaitre le menu après disparition loader */ }
 
 .main-container {
   background-color: #f6f6f6; }
+
+.logo {
+  height: 70px; }
+  .logo img {
+    width: 180px;
+    padding-top: 10px;
+    height: 70px; }
 
 h1 {
   font-family: "shrikhand", "times New Roman", Times, serif;
@@ -174,10 +179,11 @@ h2 {
   font-size: 1.5rem; }
 
 h3 {
-  font-size: 1.25rem; }
+  font-size: 1.7rem; }
 
 h4 {
-  font-size: 1rem; }
+  font-size: 1rem;
+  font-weight: 500; }
 
 h5 {
   font-size: 1rem;
@@ -189,12 +195,15 @@ a {
   text-decoration: none;
   color: black; }
 
-/* SECTION 1 */
+#subtitle {
+  font-size: 1rem;
+  font-weight: 100; }
+
 .localisation {
   border-top: 2px #cecece solid;
   box-shadow: inset 0px 1px 5px #cecece;
   background-color: #eaeaea;
-  padding: 1.2rem 0rem;
+  padding: 1rem 0rem;
   font-weight: bold;
   color: #4d4d4d; }
   .localisation__contenu {
@@ -218,7 +227,7 @@ a {
       margin-bottom: 1rem; }
     .search__contenu__bouton {
       height: 3rem;
-      width: 13.4rem;
+      width: 12rem;
       margin: auto;
       background: linear-gradient(#FF79DA, #9356DC);
       border-radius: 1.5rem;
@@ -233,7 +242,9 @@ a {
         justify-content: center;
         align-items: center;
         height: 100%;
-        width: 100%; }
+        width: 100%;
+        font-weight: 700;
+        font-size: .9rem; }
       .search__contenu__bouton:hover {
         transform: scale(1.05);
         box-shadow: 0px 6px 6px #0000002e; }
@@ -324,7 +335,7 @@ a {
     justify-self: flex-end;
     width: 5rem;
     height: 1.9rem;
-    font-size: 0.75rem;
+    font-size: 0.9rem;
     font-weight: bold;
     color: #008766;
     background-color: #99e2d0;
@@ -358,7 +369,12 @@ a {
     justify-content: center;
     margin-left: 1rem; }
     .card__body h4 {
-      margin-bottom: 0.25rem; }
+      margin-bottom: 0.25rem;
+      font-weight: 700;
+      font-size: 1rem; }
+    .card__body p {
+      font-weight: 300;
+      font-size: 1rem; }
 
 /* FOOTER */
 .fa-hands-helping {
@@ -451,14 +467,16 @@ a {
     width: 100%;
     transition: all 1s; }
     .menu__card__body__title {
-      padding-left: 1rem; }
+      padding-left: 1.1rem;
+      font-weight: 700; }
     .menu__card__body__description {
       display: flex;
       justify-content: space-between;
       padding: 0rem 1rem; }
       .menu__card__body__description p {
-        font-size: 0.8rem;
+        font-size: 0.9rem;
         margin-right: 1rem;
+        font-weight: 300;
         overflow: hidden;
         text-overflow: ellipsis;
         white-space: nowrap; }
@@ -484,7 +502,7 @@ a {
   margin-bottom: 3.5rem; }
   .order__button {
     height: 3rem;
-    width: 13.4rem;
+    width: 12rem;
     margin: auto;
     background: linear-gradient(#FF79DA, #9356DC);
     border-radius: 1.5rem;
@@ -499,7 +517,9 @@ a {
       justify-content: center;
       align-items: center;
       height: 100%;
-      width: 100%; }
+      width: 100%;
+      font-weight: 700;
+      font-size: .9rem; }
     .order__button:hover {
       transform: scale(1.05);
       box-shadow: 0px 6px 6px #0000002e; }
