--- a/sass/pages/_menus.scss
+++ b/sass/pages/_menus.scss
@@ -106,15 +106,17 @@
         width: 100%;
         transition: all 1s;
         &__title {
-          padding-left: 1rem;
+          padding-left: 1.1rem;
+          font-weight: 700;
         }
         &__description {
           display: flex;
           justify-content: space-between;
           padding: 0rem 1rem;
           p {
-            font-size: 0.8rem;
+            font-size: 0.9rem;
             margin-right: 1rem;
+            font-weight: 300;
             overflow: hidden;
             text-overflow: ellipsis;
             white-space: nowrap;
